autodeploy-sgdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autodeploy-sgdb-backend
  namespace: autodeploy-sgdb
  labels:
    app: autodeploy-sgdb-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autodeploy-sgdb-backend
  template:
    metadata:
      labels:
        app: autodeploy-sgdb-backend
    spec:
      serviceAccountName: autodeploy-sgdb-sa
      containers:
        - name: backend
          image: yrwys/autodeploy-sgdb-backend:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: autodeploy-sgdb-backend-svc
  namespace: autodeploy-sgdb
spec:
  type: ClusterIP
  selector:
    app: autodeploy-sgdb-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autodeploy-sgdb-frontend
  namespace: autodeploy-sgdb
  labels:
    app: autodeploy-sgdb-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autodeploy-sgdb-frontend
  template:
    metadata:
      labels:
        app: autodeploy-sgdb-frontend
    spec:
      containers:
        - name: frontend
          image: yrwys/autodeploy-sgdb-frontend:1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: autodeploy-sgdb-frontend-svc
  namespace: autodeploy-sgdb
spec:
  type: ClusterIP
  selector:
    app: autodeploy-sgdb-frontend
  ports:
    - name: http
      port: 8501
      targetPort: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autodeploy-sgdb-ingress
  namespace: autodeploy-sgdb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: cilium
  rules:
  - host: autodeploy-sgdb.am1-aks.apolloglobal.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autodeploy-sgdb-frontend-svc
            port:
              number: 8501
  tls:
  - hosts:
    - autodeploy-sgdb.am1-aks.apolloglobal.net
    secretName: autodeploy-sgdb-cert
